# rusty_crm

./: Cargo.toml
src/: colors.rs  contact.rs  customer.rs  editor.rs  line_buffer.rs  log4rs.yaml  logger.rs  main.rs  note.rs  phone.rs  scroll_buffer.rs  status_line.rs  utils.rs
