[package]
name = "rusty_crm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
crossterm = "0.26.1"
fake = "2.6.1"
log = "0.4.19"
log4rs = "1.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
simplelog = "0.12.1"
