[package]
name = "rusty_crm"
version = "0.1.1"
edition = "2021"
authors = ["Shane Poppleton <shane@bjja.com.au>"]
description = "A simple command line contact manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/codemonkey76/rusty_crm"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
crossterm = "0.26.1"
directories = "5.0.1"
fake = "2.6.1"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json", "native-tls"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
simplelog = "0.12.1"
tokio = { version = "1.29.0", features = ["full"] }
toml = "0.7.5"
